added basic elements

--- a/index.html
+++ b/index.html
@@ -5,16 +5,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="app.css">
+  <link href="https://fonts.googleapis.com/css2?family=Bai+Jamjuree:wght@400;600&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Clipboard landing page</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
 </head>
 <body>
+  <div class="slide1">
 
   A history of everything you copy
 
@@ -29,6 +30,8 @@
   Clipboard instantly stores any item you copy in the cloud, 
   meaning you can access your snippets immediately on all your 
   devices. Our Mac and iOS apps will help you organize everything.
+  </div>
+  <div class="slide2">
 
   Quick Search
 
@@ -41,11 +44,14 @@
   Complete History
 
   Retrieve any snippets from the first moment you started using the app.
-
+  </div>
+  <div class="slide3">
   Access Clipboard anywhere
 
   Whether you’re on the go, or at your computer, you can access all your Clipboard 
   snippets in a few simple clicks.
+</div>
+<div class="slide4">
 
   Supercharge your workflow
 
@@ -62,6 +68,7 @@
   Sneak preview
 
   Quick preview of all snippets on your Clipboard for easy access.
+  <div class="slide5">
 
   Clipboard for iOS and Mac OS
 
@@ -70,12 +77,15 @@
 
   Download for iOS
   Download for Mac
+</div>
+<div class="footer">
 
   FAQs
   Contact Us
   Privacy Policy
   Press Kit
   Install Guide
+</div>
   
   <footer>
     <p class="attribution">
