4th slide completed

--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
   <div class="slide1">
     <img class="main_logo" src="images/logo.svg" alt="logo" />
     <div class="textbox_slide1">
-      <span class="heading_slide1">A history of everything you copy</span>
+      <div class="heading_slide1">A history of everything you copy</div>
 
-      <span class="text_slide1">Clipboard allows you to track and organize everything you copy.
-        Instantly access your clipboard on all your devices.</span>
+      <div class="text_slide1">Clipboard allows you to track and organize everything you copy.
+        Instantly access your clipboard on all your devices.</div>
     </div>
 
     <div class="download_button">
@@ -70,29 +70,57 @@
 
 
   <div class="slide3">
-    Access Clipboard anywhere
+    <div class="textbox_slide3">
+    <div class="heading_slide3">Access Clipboard anywhere</div>
 
-    Whether you’re on the go, or at your computer, you can access all your Clipboard
-    snippets in a few simple clicks.
+    <div class="text_slide3">Whether you’re on the go, or at your computer, you can access all your Clipboard
+    snippets in a few simple clicks.</div>
+  </div>
+  <img src="images/image-devices.png" alt="" class="devices">
   </div>
   <div class="slide4">
+    <div class="textbox_slide4">
+      <div class="heading_slide4">
+        Supercharge your workflow
+      </div>
+      <div class="text_slide4">
 
-    Supercharge your workflow
+        We’ve got the tools to boost your productivity.
+      </div>
+    </div>
+    <div class="tools">
+      <div class="tool_content">
+        <img src="images/icon-blacklist.svg" alt="" class="tool1_image toolimage">
+        <div class="tool_heading">Create blacklists</div>
 
-    We’ve got the tools to boost your productivity.
+        <div class="tool_text">
+          Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+        </div>
+      </div>
+      <div class="tool_content">
+        <img src="images/icon-text.svg" alt="" class="tool2_image toolimage">
+        <div class="tool_heading">Plain text snippets</div>
 
-    Create blacklists
+        <div class="tool_text">
+          Remove unwanted formatting from copied text for a consistent look.
+          </div>
+      </div>
+    <div class="tool_content">
+      <img src="images/icon-preview.svg" alt="" class="tool2_image toolimage">
+      <div class="tool_heading">Sneak preview</div>
 
-    Ensure sensitive information never makes its way to your clipboard by excluding certain sources.
+      <div class="tool_text">Quick preview of all snippets on your Clipboard for easy access.</div>
+    </div>
+  </div>
 
-    Plain text snippets
-
-    Remove unwanted formatting from copied text for a consistent look.
-
-    Sneak preview
-
-    Quick preview of all snippets on your Clipboard for easy access.
-    <div class="slide5">
+  <div class="company_logo">
+    <img src="images/logo-google.png" alt="" class="google logo">
+    <img src="images/logo-ibm.png" alt="" class="imb logo">
+    <img src="images/logo-microsoft.png" alt="" class="microsoft logo">
+    <img src="images/logo-hp.png" alt="" class="hewlett logo">
+    <img src="images/logo-vector-graphics.png" alt="" class="vector logo">
+  </div>
+  <div class="slide5">
 
       Clipboard for iOS and Mac OS
 
