--- a/index.html
+++ b/index.html
@@ -121,30 +121,45 @@
     <img src="images/logo-vector-graphics.png" alt="" class="vector logo">
   </div>
   <div class="slide5">
+    <div class="textbox_slide5">
+    <div class="heading_slide5">Clipboard for iOS and Mac OS</div>
 
-      Clipboard for iOS and Mac OS
+    <div class="text_slide5">
+    Available for free on the App Store. Download for Mac or iOS, sync with iCloud
+    and you’re ready to start adding to your clipboard.
+  </div>
+  </div>
 
-      Available for free on the App Store. Download for Mac or iOS, sync with iCloud
-      and you’re ready to start adding to your clipboard.
-
-      Download for iOS
-      Download for Mac
+    <div class="download_button">
+      <button class="download_ios">Download for iOS</button>
+      <button class="download_mac">Download for Mac</button>
     </div>
-    <div class="footer">
+  </div>
+  <div class="slide6">
+    <img src="images/logo.svg" alt="" class="footlogo">
 
-      FAQs
-      Contact Us
-      Privacy Policy
-      Press Kit
-      Install Guide
+    <div class="help_info">
+    <div class="text_info">FAQs</div>
+    <div class="text_info">Contact Us</div>
+    <div class="text_info">Privacy Policy</div>
+    <div class="text_info">Press Kit</div>
+    <div class="text_info text_instalguide">Install Guide</div>
     </div>
+    <div class="social_handles">
+      <img src="images/icon-facebook.svg" alt="" class="facebook handle">
+      <img src="images/icon-twitter.svg" alt="" class="twitter handle">
+      <img src="images/icon-instagram.svg" alt="" class="insta handle">
 
-    <footer>
-      <p class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Your Name Here</a>.
-      </p>
-    </footer>
+    </div>
+  </div>
+  </div>
+
+  <footer>
+    <p class="attribution">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Gautam</a>.
+    </p>
+  </footer>
 </body>
 
 </html>
